# Persistent-Label-Encoder

./: Persistent_Label_encoder_model_train_and_Inference_label_fit.ipynb  README.md  labelEncoder.py  pyproject.toml  setup.cfg  setup.py
PersistentLabelEncoder/: labelEncoder.py
src/PersistentLabelEncoder/: labelEncoder.py
src/PersistentLabelEncoder.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
