[project]
name = "InferenceLabelEncoder"
version = "0.0.1"
authors = [
  { name="Timoth Dev (Zilch123)", email="timontunes@gmail.com" },
]
description = "Inerence Label Encoder"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Zilch123/Persistent-Label-Encoder"
"Bug Tracker" = "https://github.com/Zilch123/Persistent-Label-Encoder/issues"