[metadata]
name = PersistentLabelEncoder
version = attr: example.__version__
author = Timoth Dev (Zilch123)
author_email = timontunes@gmail.com
url = https://github.com/Zilch123/Persistent-Label-Encoder
description = Persistent Label Encoder which saves train label encoder and uses the same encoding for inference
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Label Encoder, Inference
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires = sklearn